<resources>
    <string name="app_name">Compulink Monitoring</string>
    <string name="app_name_full">Compulink Monitoring of the building</string>
    <string name="action_map">Map</string>
    <string name="action_locate">Locate</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_coordinates">Refresh coordinates</string>
    <string name="action_full_sync">Full synchronization</string>
    <string name="action_sync">Synchronization</string>
    <string name="action_reports">Report to developers</string>
    <string name="action_line_status">Change line status</string>
    <string name="action_check_app_update">Check application update</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync_settings">Sync Settings</string>
    <string name="action_about">About</string>
    <string name="action_select_folder">Select folder</string>
    <string name="focl_login_description">Enter login and password to connect to the system server</string>
    <string name="focl_edit_login_description">Enter new password to connect to the system server</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_account_summary">Editing an account password</string>
    <string name="delete_account_summary">Delete account. All user account data will be deleted. Active synchronization will be stopped.</string>
    <string name="delete_account_warn_msg">Account will be deleted!\nAll user account data will be deleted!\nCurrent sync will be stopped!</string>
    <string name="select_action">Select action</string>
    <string name="action_show_photo">Show photo</string>
    <string name="action_delete_photo">Delete photo</string>
    <string name="delete_photo_ask">Delete photo?</string>
    <string name="delete_photo_message">Photo will also be deleted on the server during the next synchronization.</string>
    <string name="delete_photo_message_2">Photo will be deleted</string>
    <string name="moving">Moving…</string>
    <string name="warning_data_moving">Dangerous operation! Don\'t cancel it or kill the application during the data moving to new location! You data may be broken or lost!</string>
    <string name="general">General settings</string>
    <string name="general_summary">The application general settings</string>
    <string name="map">Map</string>
    <string name="map_summary">Map settings</string>
    <string name="sync_settings">Sync settings</string>
    <string name="sync_settings_summary">Data synchronization settings with the server system</string>
    <string name="save_photo">Save photos</string>
    <string name="save_photo_summary">Save photos in a specified folder.</string>
    <string name="photo_path">A folder for photos</string>
    <string name="photo_path_summary">The path to the folder to store photos.</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Prevent screen switch off</string>
    <string name="show_zoom_controls">Show zoom controls</string>
    <string name="show_zoom_controls_summary">Show zoom in and zoom out control on map</string>
    <string name="show_location">Current location</string>
    <string name="show_location_summary">Show current location on map</string>
    <string name="location_off">GPS is turned off</string>
    <string name="location_off_message">To work correctly, you must turn the GPS!</string>
    <string name="no_account">NO account</string>
    <string name="no_network_no_sync">NO network, synchronization is not performed</string>
    <string name="perform_sync">Initial synchronization is performed, please wait.</string>
    <string name="latitude_caption">Lt:</string>
    <string name="longitude_caption">Lg:</string>
    <string name="altitude_caption">Al:</string>
    <string name="accuracy_caption">Ac:</string>
    <string name="altitude_unit">m</string>
    <string name="accuracy_unit">m</string>
    <string name="distance_unit">m</string>
    <string name="select_work_type">Select work type:</string>
    <string name="cable_laying">Cable laying</string>
    <string name="fosc_mounting">FOSC mounting</string>
    <string name="cross_mounting">Cross mounting</string>
    <string name="access_point_mounting">Access point mounting</string>
    <string name="special_transition_laying">Special transition laying</string>
    <string name="object_attributes">Object attributes</string>
    <string name="select_line_colon">Select line:</string>
    <string name="communication_line_colon">Communication line:</string>
    <string name="select_optical_cables_colon">Select optical cables:</string>
    <string name="select_fosc_colon">Select FOSC:</string>
    <string name="select_cross_colon">Select cross:</string>
    <string name="select_access_points_colon">Select access point:</string>
    <string name="optical_cable_colon">Optical cable:</string>
    <string name="fosc_colon">FOSC:</string>
    <string name="cross_colon">Cross:</string>
    <string name="access_point_colon">Access point:</string>
    <string name="special_transition_colon">Special transition:</string>
    <string name="line_status_colon">Construction status:</string>
    <string name="line_status_hint">Select the status of building</string>
    <string name="coordinates_colon">Coordinates:</string>
    <string name="description_colon">Commentary:</string>
    <string name="description_hint">Enter commentary</string>
    <string name="laying_method">Laying method</string>
    <string name="fosc_type">FOSC type</string>
    <string name="fosc_placement">FOSC placement</string>
    <string name="optical_cross_type">Cross type</string>
    <string name="special_laying_method">Laying method</string>
    <string name="mark_type">Point of entry/exit</string>
    <string name="laying_method_colon">Laying method:</string>
    <string name="laying_method_hint">Select laying method</string>
    <string name="fosc_type_colon">FOSC type:</string>
    <string name="fosc_type_hint">Select FOSC type</string>
    <string name="fosc_placement_colon">FOSC placement:</string>
    <string name="fosc_placement_hint">Select FOSC placement</string>
    <string name="optical_cross_type_colon">Cross type:</string>
    <string name="optical_cross_type_hint">Select cross type</string>
    <string name="special_laying_method_colon">Laying method:</string>
    <string name="special_laying_method_hint">Select laying method</string>
    <string name="mark_type_colon">Point of entry/exit:</string>
    <string name="mark_type_hint">Select mark type</string>
    <string name="specify_work_status">Specify work status:</string>
    <string name="take_photos_to_confirm">Take photos to confirm of the executed works.</string>
    <string name="make_photo">Make photo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="synchronization">Synchronization</string>
    <string name="sync_started">Synchronization started</string>
    <string name="sync_finished">Synchronization finished</string>
    <string name="sync_canceled">Synchronization canceled</string>
    <string name="sync_error">ERROR of synchronization</string>
    <string name="sync_progress">Synchronization in progress</string>
    <string name="report">Data sending</string>
    <string name="report_started">Sending started</string>
    <string name="report_finished">Sending finished</string>
    <string name="report_canceled">Sending canceled</string>
    <string name="report_error">ERROR of data sending</string>
    <string name="report_progress">Sending in progress</string>
    <string name="reports_not_found">Reports not found</string>
    <string name="compas_N">N</string>
    <string name="compas_NE">NE</string>
    <string name="compas_E">E</string>
    <string name="compas_SE">SE</string>
    <string name="compas_S">S</string>
    <string name="compas_SW">SW</string>
    <string name="compas_W">W</string>
    <string name="compas_NW">NW</string>
    <string name="coord_lat"></string>
    <string name="coord_lon"></string>
    <string name="completed">Complete</string>
    <string name="no_name">[No name]</string>
    <string name="app_description">Mobile application for data entry on the FOCL construction.</string>
    <string name="update_link"><![CDATA[<a href=\"https://play.google.com/store/apps/details?id=com.nextgis.ngm_clink_monitoring&hl=ru\">Check for Updates</a>]]></string>
    <string name="credits_intro"><b>Credits:</b></string>
    <string name="credits"><![CDATA[Some icons used in the application are from:<br>- <a href=\"http://icons8.com/android-icons\">Icons8.com</a>, licensed under a <a href=\"http://creativecommons.org/licenses/by-nd/3.0/\">CC BY-ND 3.0 license</a><br>- <a href=\"http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html\">romannurik.github.io</a>, licensed under a <a href=\"http://creativecommons.org/licenses/by/3.0/\">CC BY 3.0 license</a>]]></string>
    <string name="consumer_site"><![CDATA[Company group <a href=\"http://www.compulink.ru/\">«Compulink»</a>]]></string>
    <string name="based_on"><![CDATA[Based on the <a href=\"http://nextgis.ru/nextgis-mobile\">NextGIS Mobile</a>]]></string>
    <string name="copyright"><![CDATA[Copyright © <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2015]]></string>
    <string name="menu_done">Done</string>
    <string name="menu_back">Back</string>
    <string name="coordinate_refining">Coordinate refining</string>
    <string name="coordinates_not_defined">Coordinates are not defined</string>
    <string name="distance_from_prev_point_colon">Distance from the previous point:</string>
    <string name="object_creation_error">Object creation ERROR</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_cancel_object_creating">Are you sure you want to cancel data entry?</string>
    <string name="confirm_new_start_point_creating">Will be created a new starting point. Are you sure?</string>
    <string name="warning">Warning</string>
    <string name="coordinates_refining_process">The process of refinement the coordinates. Wait until it ends.</string>
    <string name="coordinates_not_defined_try_again">Coordinates are not defined. Make sure there is a good view of the sky, and try again.</string>
    <string name="coordinates_not_defined_change_location">Coordinates are not defined. Please change your location and try again.</string>
    <string name="determine_coordinates">Determine the coordinates</string>
    <string name="starting_point">Starting point</string>
    <string name="distance_from_prev_point_exceeded">Distance from previous point is exceeded, max is 300 m.\n\nShorten the distance and try to refining the coordinates. Or mark a new starting point.</string>
    <string name="shorten_distance_and_repeat">Shorten the distance and try to refining the coordinates.</string>
    <string name="Or_new_start_point">Or mark a new starting point.</string>
    <string name="change_line_status_confirmation">Do you really want to change the line status?</string>
    <string name="photo_not_saved">Photo is not saved!</string>
    <string name="photo_not_saved_distance_exceed">Photography is not stored as the distance from the point of determining the coordinates is more than 100 m.</string>
    <string name="empty_field_warning">Field \"%1$s\" must be filled.</string>
    <string name="status_setting">Status setting</string>
    <string name="get_server_data">Get server data</string>
    <string name="send_data_to_server">Send data to server</string>
    <string name="send_work_data">Send copy of the work data</string>
    <string name="focl_url">Compulink Server URL</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_sdcard">No SD-Card</string>
</resources>