<?xml version="1.0" encoding="utf-8"?>
<!--****************************************************************************
  * Project:  NextGIS mobile apps for Compulink
  * Purpose:  Mobile GIS for Android
  * Authors:  Dmitry Baryshnikov (aka Bishop), polimax@mail.ru
  *           NikitaFeodonit, nfeodonit@yandex.com
  * *****************************************************************************
  * Copyright (C) 2014-2015 NextGIS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ***************************************************************************-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/general"
        android:summary="@string/general_summary"
        >
        <intent
            android:action="com.nextgis.ngm_clink_monitoring.PREFS_GENERAL"
            android:targetClass="com.nextgis.ngm_clink_monitoring.activities.FoclSettingsActivity"
            android:targetPackage="com.nextgis.ngm_clink_monitoring"
            />
    </Preference>

    <Preference
        android:title="@string/map"
        android:summary="@string/map_summary"
        >
        <intent
            android:action="com.nextgis.ngm_clink_monitoring.PREFS_MAP"
            android:targetClass="com.nextgis.ngm_clink_monitoring.activities.FoclSettingsActivity"
            android:targetPackage="com.nextgis.ngm_clink_monitoring"
            />
    </Preference>

    <Preference
        android:title="@string/sync_settings"
        android:summary="@string/sync_settings_summary"
        >
        <intent
            android:action="com.nextgis.ngm_clink_monitoring.PREFS_NGW"
            android:targetClass="com.nextgis.ngm_clink_monitoring.activities.NGWSettingsActivityProxy"
            android:targetPackage="com.nextgis.ngm_clink_monitoring"
            />
    </Preference>

</PreferenceScreen>
