<!--
  * Project:  NextGIS mobile apps for Compulink
  * Purpose:  Mobile GIS for Android
  * Authors:  Dmitry Baryshnikov (aka Bishop), polimax@mail.ru
  *           NikitaFeodonit, nfeodonit@yandex.com
  * *****************************************************************************
  * Copyright (C) 2014-2015 NextGIS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    >
    <!--http://stackoverflow.com/a/1662088-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        >

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >

                <!-- Common -->

                <TextView
                    android:id="@+id/type_work_title_cr"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="0dp"
                    style="@style/largeCaptionStyle"
                    />

                <TextView
                    android:text="@string/communication_line_colon"
                    android:layout_marginTop="0dp"
                    style="@style/smallCaptionStyle"
                    />

                <TextView
                    android:id="@+id/line_name_cr"
                    style="@style/selectedLineStyle"
                    />

                <TextView
                    android:text="@string/coordinates_colon"
                    style="@style/smallCaptionStyle"
                    />

                <RelativeLayout
                    style="@style/refiningLayoutStyle"
                    >

                    <TextView
                        android:id="@+id/coordinates_cr"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        style="@style/selectedObjectStyle"
                        android:visibility="visible"
                        />

                    <ProgressBar
                        android:id="@+id/refining_progress_cr"
                        android:layout_below="@+id/coordinates_cr"
                        style="@style/refiningProgressBarStyle"
                        android:visibility="visible"
                        />

                </RelativeLayout>

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/distance_layout_cr"
                    style="@style/distanceLayoutStyle"
                    android:visibility="visible"
                    >

                    <TextView
                        android:id="@+id/distance_from_prev_point_caption_cr"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="start|center_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/distance_from_prev_point_cr"
                        android:text="@string/distance_from_prev_point_colon"
                        style="@style/smallCaptionStyle"
                        />

                    <TextView
                        android:id="@+id/distance_from_prev_point_cr"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="end"
                        android:layout_alignParentRight="true"
                        android:minWidth="75dp"
                        android:gravity="end"
                        android:ellipsize="start"
                        style="@style/distanceTextStyle"
                        />

                </RelativeLayout>


                <!-- Optical cable -->

                <TextView
                    android:id="@+id/laying_method_caption_cr"
                    android:text="@string/laying_method_colon"
                    android:layout_marginBottom="0dp"
                    style="@style/comboboxSmallCaptionStyle"
                    android:visibility="gone"
                    />

                <com.nextgis.ngm_clink_monitoring.fragments.ComboboxControl
                    android:id="@+id/laying_method_cr"
                    android:prompt="@string/laying_method_hint"
                    style="@style/comboboxStyle"
                    android:visibility="gone"
                    />


                <!-- FOSC -->

                <TextView
                    android:id="@+id/fosc_type_caption_cr"
                    android:text="@string/fosc_type_colon"
                    style="@style/comboboxSmallCaptionStyle"
                    android:visibility="gone"
                    />

                <com.nextgis.ngm_clink_monitoring.fragments.ComboboxControl
                    android:id="@+id/fosc_type_cr"
                    android:prompt="@string/fosc_type_hint"
                    style="@style/comboboxStyle"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/fosc_placement_caption_cr"
                    android:text="@string/fosc_placement_colon"
                    style="@style/comboboxSmallCaptionStyle"
                    android:visibility="gone"
                    />

                <com.nextgis.ngm_clink_monitoring.fragments.ComboboxControl
                    android:id="@+id/fosc_placement_cr"
                    android:prompt="@string/fosc_placement_hint"
                    style="@style/comboboxStyle"
                    android:visibility="gone"
                    />


                <!-- Optical cross -->

                <TextView
                    android:id="@+id/optical_cross_type_caption_cr"
                    android:text="@string/optical_cross_type_colon"
                    style="@style/comboboxSmallCaptionStyle"
                    android:visibility="gone"
                    />

                <com.nextgis.ngm_clink_monitoring.fragments.ComboboxControl
                    android:id="@+id/optical_cross_type_cr"
                    android:prompt="@string/optical_cross_type_hint"
                    style="@style/comboboxStyle"
                    android:visibility="gone"
                    />


                <!-- Access point -->

                <!-- Nothing -->


                <!-- Special transition -->

                <TextView
                    android:id="@+id/special_laying_method_caption_cr"
                    android:text="@string/special_laying_method_colon"
                    style="@style/comboboxSmallCaptionStyle"
                    android:visibility="gone"
                    />

                <com.nextgis.ngm_clink_monitoring.fragments.ComboboxControl
                    android:id="@+id/special_laying_method_cr"
                    android:prompt="@string/special_laying_method_hint"
                    style="@style/comboboxStyle"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/mark_type_caption_cr"
                    android:text="@string/mark_type_colon"
                    style="@style/comboboxSmallCaptionStyle"
                    android:visibility="gone"
                    />

                <com.nextgis.ngm_clink_monitoring.fragments.ComboboxControl
                    android:id="@+id/mark_type_cr"
                    android:prompt="@string/mark_type_hint"
                    style="@style/comboboxStyle"
                    android:visibility="gone"
                    />


                <!-- Common -->

                <TextView
                    android:text="@string/description_colon"
                    style="@style/smallCaptionStyle"
                    />

                <EditText
                    android:id="@+id/description_cr"
                    android:hint="@string/description_hint"
                    style="@style/editDescriptionStyle"
                    />

                <TextView
                    android:id="@+id/photo_hint_text_cr"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/photo_hint_background"
                    android:textColor="@color/photo_hint_text_color"
                    android:text="@string/take_photos_to_confirm"
                    style="@style/smallCaptionStyle"
                    android:visibility="visible"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/photo_gallery_cr"
                    android:layout_height="104dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:scrollbars="horizontal"
                    android:visibility="gone"
                    />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
