<?xml version="1.0" encoding="utf-8"?>
<!--****************************************************************************
  * Project:  NextGIS mobile apps for Compulink
  * Purpose:  Mobile GIS for Android
  * Authors:  Dmitry Baryshnikov (aka Bishop), polimax@mail.ru
  *           NikitaFeodonit, nfeodonit@yandex.com
  * *****************************************************************************
  * Copyright (C) 2014-2015 NextGIS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ***************************************************************************-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="keep_screen_on"
        android:summary="@string/keep_screen_on_summary"
        android:title="@string/keep_screen_on"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_zoom_controls"
        android:summary="@string/show_zoom_controls_summary"
        android:title="@string/show_zoom_controls"
        />

</PreferenceScreen>
