<!--****************************************************************************
  * Project:  NextGIS mobile apps for Compulink
  * Purpose:  Mobile GIS for Android
  * Authors:  Dmitry Baryshnikov (aka Bishop), polimax@mail.ru
  *           NikitaFeodonit, nfeodonit@yandex.com
  * *****************************************************************************
  * Copyright (C) 2014-2015 NextGIS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ***************************************************************************-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <item
        android:icon="@drawable/ic_action_map"
        android:id="@+id/menu_map"
        android:orderInCategory="0"
        android:title="@string/action_map"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_sync"
        android:orderInCategory="10"
        android:title="@string/action_sync"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        />

    <!--for debug-->

    <!--
        <item
            android:id="@+id/menu_test"
            android:orderInCategory="100"
            android:title="test"
            app:showAsAction="never"
            />
    -->

</menu>
