<?xml version="1.0" encoding="utf-8"?>
<!--
  * Project:  NextGIS mobile apps for Compulink
  * Purpose:  Mobile GIS for Android
  * Authors:  Dmitry Baryshnikov (aka Bishop), polimax@mail.ru
  *           NikitaFeodonit, nfeodonit@yandex.com
  * *****************************************************************************
  * Copyright (C) 2014-2015 NextGIS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        >

        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/sync_sy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/send_data_to_server"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/full_sync_sy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/get_server_data"
                />

            <RadioButton
                android:id="@+id/send_work_data_sy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/send_work_data"
                />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
